--- a/packages/data-grid/src/table/Table.scss
+++ b/packages/data-grid/src/table/Table.scss
@@ -65,7 +65,8 @@
   width: 16px;
 }
 
-.dg-table-header-checkbox > div, .dg-table-checkbox > div {
+.dg-table-header-checkbox > div,
+.dg-table-checkbox > div {
   margin-right: 0;
 }
 
