--- a/packages/data-grid/src/tableFooter/TableFooter.scss
+++ b/packages/data-grid/src/tableFooter/TableFooter.scss
@@ -1,5 +1,8 @@
+@import '@puppet/sass-variables/_index';
+
 .dg-table-row-count {
   margin-right: 20px;
+  font-weight: $puppet-type-weight-heavy;
 }
 .dg-table-footer-container {
   padding-top: 10px;
