--- a/packages/data-grid/src/tableHeader/TableHeader.scss
+++ b/packages/data-grid/src/tableHeader/TableHeader.scss
@@ -1,4 +1,7 @@
+@import '@puppet/sass-variables/_index';
+
 .dg-table-row-count {
   margin-right: 20px;
   margin-bottom: 16px;
+  font-weight: $puppet-type-weight-heavy;
 }
