Make pagination buttons 24x24

--- a/packages/data-grid/src/tablePageSelector/TablePageSelector.scss
+++ b/packages/data-grid/src/tablePageSelector/TablePageSelector.scss
@@ -1,4 +1,7 @@
 .rc-page-selector-container {
-  text-align: right;
-  padding-top: 0px;
+  .rc-page-selector-button {
+    padding: 0 6px !important;
+    min-width: 24px !important;
+    height: 24px !important;
+  }
 }
