Remove important flag

--- a/packages/data-grid/src/tablePageSelector/TablePageSelector.scss
+++ b/packages/data-grid/src/tablePageSelector/TablePageSelector.scss
@@ -1,7 +1,7 @@
 .rc-page-selector-container {
   .rc-page-selector-button {
-    padding: 0 6px !important;
-    min-width: 24px !important;
-    height: 24px !important;
+    padding: 0 6px;
+    min-width: 24px;
+    height: 24px;
   }
 }
